k8s/environments/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: prod-env
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    cert-manager.io/cluster-issuer: REPLACE_WITH_ACM_CERTIFICATE
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  rules:
    - host: demoprojects.space
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts
                port:
                  number: 8001
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comments
                port:
                  number: 8002
          - path: /query
            pathType: Prefix
            backend:
              service:
                name: query
                port:
                  number: 8003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
